test/typeerrors/ex12.golden
Building file ../test/typeerrors/ex12.act
  Compiling ex12.act for development

ERROR: Error when compiling ex12 module: Type error

Cannot satisfy the following simultaneous constraints for the unknown types t0, t1:

  |
2 |    env.exit()
  |    ^^^
The type of the indicated expression (inferred to be _) must have an attribute exit with type t0() -> _; no such type is known.

  |
2 |    env.exit()
  |    ^^^^^^^^^^
t0 must implement $Wrapped[_, t1]

  |
2 |    env.exit()
  |    ^^^^^^^^^^
The type of the indicated expression (which we call t1) must be a subclass of proc

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

